--- a/animation-activity/index.html
+++ b/animation-activity/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Transform Lab</title>
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="activity.css">
+    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="activity.css" />
   </head>
   <body>
     <div class="container">
